# presentation-cppcon2024

./: index.html
code/: CMakeLists.txt  Dockerfile  concepts.h  run.sh  sample.h  sample_benchmark.cpp  sample_test.cpp
